@@ -1,5 +1,5 @@
 DIST ltc-tools-0.6.3.tar.gz 30762 SHA256 4cdb8ad56469d3d394e844f10243000f12d17057783a059b14b8ab7b6f26e9b8 SHA512 98fd47e4f5e15b7373db55605e3c85c5be49df2132f8092795b99508b9f6fb484608f26a3afeeca3d64919fe8387841546e467d25eb91d8a22f619b4f596f6fe WHIRLPOOL cdd5adafff1b2471523607694f151a634a6829eb7c69cdbb4d51ab6ad0b65152d59ab22f77adaab588785933e5dc0b77b94ddf9026291c98a6264c2c1a821375
-EBUILD ltc-tools-0.6.3.ebuild 740 SHA256 d1004557c87b4605e0b1bebedb883684d7a1f454a2c6d0570a492ece9f5894fb SHA512 fa3353284262897080e40d3957c483151b05c3507cc25e2e889bff33d221456be9aef17c70354e21d688e99314360b4e957b559aa4400fd1ee976254acc4f092 WHIRLPOOL 1c94780004ab8db04011e745847e35edf95f7748e1a487de0d614e358e68fb792fcb6577a47ebae0be9013160787032a43e2eb87a4032c4c01752470da05efb9
-EBUILD ltc-tools-9999.ebuild 740 SHA256 d1004557c87b4605e0b1bebedb883684d7a1f454a2c6d0570a492ece9f5894fb SHA512 fa3353284262897080e40d3957c483151b05c3507cc25e2e889bff33d221456be9aef17c70354e21d688e99314360b4e957b559aa4400fd1ee976254acc4f092 WHIRLPOOL 1c94780004ab8db04011e745847e35edf95f7748e1a487de0d614e358e68fb792fcb6577a47ebae0be9013160787032a43e2eb87a4032c4c01752470da05efb9
-MISC ChangeLog 382 SHA256 6b81362fd8f1ffef4a0167f51120c09deee5a2aa61b97e9e0709e0f385ad8433 SHA512 77518b2bb57b2a82d282722f9f8e6daca3643a64fe460f2d7aa32c80f5e42946a2de5d09321a3c819dccd297c0e3fe437bea867f885c978df924934c5d4328aa WHIRLPOOL a204ac22595c7d4c6f25116c5941b390f585d41f4348a19fa28d932aa35adb9a4bfa46f57837e0f7d82fe839cddee116e90615d8221b6384e04abcd7696186da
+EBUILD ltc-tools-0.6.3.ebuild 800 SHA256 564e4648929417792e4de358e44c6f2a6d70f94a7f4e981ea3639b2efb790550 SHA512 42361d275c9ad04bf85a59f3a1d6eb754deb74fd94288f7a22dc8a52cafd567ff6f4139540b22301ce0c588944b3e293711bf703a83baf542c28188e26928ed0 WHIRLPOOL f07b8472655f2da0f93ff4f0404097db558e747a34a1fea214b29ab71ab954262240e6a36867e48984da68570074266c9532a1bc88f00b9ac2c750b103250ab9
+EBUILD ltc-tools-9999.ebuild 800 SHA256 564e4648929417792e4de358e44c6f2a6d70f94a7f4e981ea3639b2efb790550 SHA512 42361d275c9ad04bf85a59f3a1d6eb754deb74fd94288f7a22dc8a52cafd567ff6f4139540b22301ce0c588944b3e293711bf703a83baf542c28188e26928ed0 WHIRLPOOL f07b8472655f2da0f93ff4f0404097db558e747a34a1fea214b29ab71ab954262240e6a36867e48984da68570074266c9532a1bc88f00b9ac2c750b103250ab9
+MISC ChangeLog 546 SHA256 9dc15ab19d20151dd60257502af699d90a100487d37dc5d39bf739ee7d86ff2b SHA512 cc86e54a6e799202d2f713343864c6872088aa7b1e1f07869b339ca74d0f3905860c64088ecbe47977f0fdc8dc816d8c159690f71a020f2a990244541c767415 WHIRLPOOL 6e03ca2740f27c102a03e346bc7fa9c434be0f31f626d20f7fc3ca04c21c6a36862fb45e0942e2cb2deee39acceba4bc46c8a8b6aff015c78f6d824d06ae2a5b
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
