@@ -34,3 +34,8 @@ src_compile() {
 	tc-export CC
 	default
 }
+
+src_install() {
+	export PREFIX="${EPREFIX}"/usr
+	default
+}
